--- a/style.css
+++ b/style.css
@@ -58,7 +58,11 @@ button:hover{
     grid-auto-columns: 1fr;
 }
 
-
+.selected{
+    transition: 0.07s;
+    border-color: yellow;
+    scale: 1.1;
+}
 
 .game-button{
     font-weight: bold;
@@ -74,6 +78,16 @@ button:hover{
     background-color: transparent;
 }
 
+.messages{
+
+    padding-top:30px;
+    color: white;
+    font-weight: bold;
+    font-size:110%;
+    
+    margin:auto;
+    justify-content: center;
+}
 
 .footer{
     padding-top: 100px;
