--- a/style.css
+++ b/style.css
@@ -18,6 +18,15 @@ section{
     justify-content: center;
 }
 
+span{
+    background-color: transparent;
+    color: white;
+}
+
+em{
+    color: white;
+}
+
 
 h5{
 
@@ -33,6 +42,8 @@ h5{
     height:250px;
 }
 
+
+
 .RPS{
     font-size: 24px;
     color: white;
@@ -40,7 +51,6 @@ h5{
     flex:1;
     margin-bottom: 40px;
     font-weight: bold;
-    transition: 0.3s;
 
 }
 
